loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:1: error: Missing closing brace `}' assumed here
for (k <-1 to 6){
^