loopfor.LoopCourseForest.scala.code
for (k <-1 to 6){
  for (i <-1 to 3){
    avance()
  }
  gauche()
	for(i<-1 to 2){
    avance()
  }
  for (i <-1 to 3){
    avance()
  }
  droite()
  for(i<-1 to 2){
    avance()
    }
  	for(i<-1 to 2){
    avance()


}
